# bilipod

./: .gitignore  .isort.cfg  Dockerfile  README.md  README_CN.md  config_example.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-image.yml
docs/: TO_DO.MD  nginx_bilipod_example.conf
src/bilipod/: __init__.py  __main__.py  main.py
src/bilipod/bp_class/: __init__.py  episode.py  pod.py
src/bilipod/downloader/: __init__.py  downloader.py  video_downloader.py
src/bilipod/exceptions/: DownloadError.py  __init__.py
src/bilipod/executing/: __init__.py  clean.py  config_watcher.py  initialize.py  scheduler.py  update.py  web_server.py
src/bilipod/feed/: __init__.py  opml.py  podcast_rss.py
src/bilipod/utils/: auth_status.py  biliuser.py  bp_log.py  config_parser.py  db_query.py  endorse.py  login.py  parse_netscape.py  sponsorblock.py  url.py
src/bilipod/web/: index.html
src/bilipod/web/static/: index.html  qrcode_login.html  sms_code.html
tests/: test_auth_status.py  test_clean.py  test_config_parser.py  test_config_watcher.py  test_login_helpers.py  test_opml.py  test_pod.py  test_podcast_xml.py  test_sponsorblock.py  test_url.py
